--- a/ProyectoAsync/Pinterest/style.css
+++ b/ProyectoAsync/Pinterest/style.css
@@ -27,10 +27,10 @@
 
 }
   /* TYPOGRAPHY */
-  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
 h1, h2, h3, h4, h5, p, span, div, body, header, footer {
-    font-family: font-family: 'Playfair Display', serif;
+   font-family: 'Inter', sans-serif;
 }
 
 
@@ -47,7 +47,34 @@ html, body {
 
 
 body {
-  background-color: var(--pv-primary-color);
+  background-color: var(--pv-accent-color-color);
 }
 
+.flex-header {
+  display: flex;
+  flex-direction: row;
+  gap: var(--pv-gap-m);
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: nowrap;
+}
 
+ul, li, a {
+  text-decoration: none;
+  list-style: none;
+  color: var(--pv-primary-color);
+  font-size: 16px;
+}
+
+#search-bar {
+  min-width: 700px;
+  padding: var(--pv-gap-m);
+  border-radius: 50px;
+  background: #f1f0f0;
+  border: none;
+  color: #808080;
+}
+
+#header-logo {
+  height: 30px;
+}
