--- a/Proyecto_2/style.css
+++ b/Proyecto_2/style.css
@@ -53,3 +53,133 @@ body {
     min-height: 100svh;
 }
 
+p, h1, h2, h3, h4, h5, h6, a, button {
+    color: var(--pv-text);
+}
+
+#naranjitos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: var(--pv-padding-xl);
+    gap: var(--pv-gap-xl);
+    max-height: 80svh;
+    overflow-y: scroll;
+}
+
+#naranjitos > div {
+    display: flex;
+    flex-direction: column;
+    gap: var(--pv-gap-m);
+    max-width: 500px;
+    box-shadow: 1px 2px 7px -3px var(--pv-borderColor);
+    border-radius: var(--pv-border-radius);
+    padding: var(--pv-padding-m);
+}
+
+#naranjitos > div img {
+    width: 20px;
+}
+
+.userInfo {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: var(--pv-gap-m);
+}
+
+.userInfo h3{
+    font-size: 14px;
+}
+
+.userInfo > p {
+    opacity: 0.5;
+    font-size: 10px;
+}
+
+#naranjitos > div > .userInfo > img {
+    width: 30px;
+}
+
+.textoPrincipal {
+    color: var(--pv-text);
+}
+
+.info {
+    display: flex;
+    justify-content: end;
+    gap: var(--pv-gap-m);
+}
+
+.info > div {
+    display: flex;
+    gap: var(--pv-gap-xs);
+}
+
+.info > div > img {
+    cursor: pointer;
+    transition: all 0.25s;
+}
+
+.info > div > img:hover {
+    transform: scale(1.3);
+}
+
+#publicar {
+    display: flex;
+    gap: var(--pv-gap-m);
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 100px;
+    width: 100%;
+    height: 200px;
+    background-color: var(--pv-bgColor);
+}
+
+#publicar > input {
+    border-radius: var(--pv-border-radius);
+    width: 80%;
+    max-width: 700px;
+    height: 30px;
+    border: 2px solid var(--pv-borderColor);
+    padding: var(--pv-padding-m) var(--pv-gap-l);
+}
+
+#publicar > button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: all 0.25s;
+}
+
+#publicar > button:hover {
+    transform: scale(1.1);
+    animation: animacionNaranja 0.5s infinite;
+}
+
+/* Animación */
+
+@keyframes animacionNaranja {
+    0% {
+        transform: rotate(0deg)
+    }
+    25% {
+        transform: rotate(25deg)
+    }
+    50% {
+        transform: rotate(0deg)
+    }
+    75% {
+        transform: rotate(-25deg)
+    }
+    100% {
+        transform: rotate(0deg)
+    }
+}
+
+#publicar > button > img{
+    width: 30px;
+}
+
