--- a/ProyectoAsync/Pinterest/style.css
+++ b/ProyectoAsync/Pinterest/style.css
@@ -1,5 +1,14 @@
-* {
-  box-sizing: border-box;
+ /* TYPOGRAPHY */
+ @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
+
+
+:root {
+
+  --color-background: whitesmoke;
+  --primary: #111111;
+  --secondary: #cacaca;
+  --logo: #e60022;
+  --transparent: rgba(245,245,245, 0.862);
 
   /* SPACING */
 
@@ -26,47 +35,42 @@
   --pv-accent-color: #D8E4FF;
 
 }
-  /* TYPOGRAPHY */
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
-h1, h2, h3, h4, h5, p, span, div, body, header, footer {
-   font-family: 'Inter', sans-serif;
-}
-
-
-h1 {
-  font-size: 32px;
-  font-weight: 700;
-  color: var(--pv-accent-color);
-}
-
-html, body {
-  padding: 0;
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
 
 body {
-  background-color: var(--pv-accent-color-color);
+  background-color: var(--color-background);
+  color: var(--primary);
+  font-family: "Inter", sans-serif;
 }
 
-.flex-header {
-  display: flex;
-  flex-direction: row;
-  gap: var(--pv-gap-m);
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-
-ul, li, a {
+a {
   text-decoration: none;
-  list-style: none;
-  color: var(--pv-primary-color);
-  font-size: 16px;
+  color: inherit;
 }
 
-#search-bar {
+.dark {
+  background-color: var(--primary);
+  color: var(--color-background);
+}
+
+.active {
+  background-color: var(--primary);
+  color: var(--color-background);
+  padding: 1rem;
+  border-radius: 2rem;
+}
+
+li{
+  list-style-type: none;
+}
+
+/* 
+#search__bar {
   min-width: 700px;
   padding: var(--pv-gap-m);
   border-radius: 50px;
@@ -78,3 +82,282 @@ ul, li, a {
 #header-logo {
   height: 30px;
 }
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search__results {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  margin: 0 auto;
+  padding: 15px;
+}
+
+.search__result {
+  margin-bottom: 60px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.search__result img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#show__more {
+  font-size: 18px;
+  padding: 10px 20px;
+  text-align: center;
+  display: block;
+  margin: 30px auto;
+  border-radius: 5px;
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and(max-width: 768px) {
+    .search__results {
+      padding: 20px;
+    }
+
+    .search__result {
+      width: 45%;
+    }
+}
+
+@media screen and(max-width: 480px) {
+  .search__result {
+    width: 100%;
+  }
+} */
+
+
+/* HEADER STYLES */
+
+header {
+  display: flex;
+  height: 15vh;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  gap: 1.5rem;
+}
+
+header > h1 {
+  background-color: var(--logo);
+  width: 30px;
+  height: 30px;
+  font-size: 1.5rem;
+  text-align: center;
+  border-radius: 50%;
+  color: var(--pv-primary-color);
+}
+
+header input {
+  padding: 1rem 1.4rem;
+  border-radius: 2rem;
+  flex-grow: 1;
+  background-color: var(--pv-secondary-color);
+  border: none;
+  font-size: 1rem;
+}
+
+header button {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header img {
+  height: 28px;
+  width: 28px;
+}
+
+header button:hover {
+  background-color: var(--pv-secondary-color);
+}
+
+header .icon {
+  filter: contrast(30%);
+}
+
+header .profileimg {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
+
+/*  FOOTER STYLES  */
+
+footer {
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* GALLERY ITEM STYLES */
+
+.gallery-item {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  border-radius: 2rem;
+  overflow: hidden;
+}
+
+.gallery-item > div {
+  padding: 1rem;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  backdrop-filter: brightness(50%) blur(3px);
+  display: none;
+}
+
+.gallery-item:hover > div {
+  display: flex;
+  cursor: zoom-in;
+}
+
+.gallery-item .save-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.gallery-item .links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.gallery-item button {
+  padding: 1rem 1.4rem;
+  border-radius: 2rem;
+  border: none;
+  background-color: var(--pv-accent-color);
+  color: var(--pv-primary-color);
+  font-size: 1rem;
+}
+
+.gallery-item .links a{
+  background-color: var(--pv-accent-color);
+  padding: 0.5rem;
+  border-radius: 2rem;
+  font-size: 0.8rem;
+}
+
+.gallery-item .links img {
+  width: 24px;
+  height: 24px;
+}
+
+.gallery-item .links div {
+  display: flex;
+  gap: 1rem;
+}
+
+.gallery-item .full-link {
+  width: 200px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  color: black;
+}
+
+.gallery-item:nth-child(2) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(4) {
+  grid-row: span 2;
+}
+.gallery-item:nth-child(6) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(8) {
+  grid-row: span 2;
+}
+.gallery-item:nth-child(10) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(12) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(14) {
+  grid-row: span 2;
+}
+.gallery-item:nth-child(16) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(18) {
+  grid-row: span 2;
+}
+.gallery-item:nth-child(20) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(22) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(24) {
+  grid-row: span 2;
+}
+.gallery-item:nth-child(26) {
+  grid-column: span 2;
+}
+.gallery-item:nth-child(28) {
+  grid-row: span 2;
+}
+.gallery-item:nth-child(30) {
+  grid-column: span 2;
+}
+
+
+
+
+/* GALLERY STYLES */
+
+.gallery {
+  padding: 0 1rem;
+  display: grid;
+  grid-auto-rows: 200px;
+  gap: 1rem;
+  grid-auto-flow: row dense;
+}
+
+@media screen and (min-width: 576px) {
+    .gallery {
+      grid-template-columns: repeat(1, fr);
+    }
+}
+
+@media screen and (min-width: 768px) {
+  .gallery {
+    grid-template-columns: repeat(3, fr);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .gallery {
+    grid-template-columns: repeat(4, fr);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery {
+    grid-template-columns: repeat(6, fr);
+  }
+}
+
